bailed on sockets, merging to master

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-beta.3/angular-ui-router.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script src="/js/app.module.js"></script>
     <script src="/js/create/create.controller.js"></script>
     <script src="/js/storm/storm.controller.js"></script>
     <script src="/js/app.config.js"></script>
+    <script src="/js/services/messageSocket.js" charset="utf-8"></script>
+    <script src="/bower_components/angular-socket-io/socket.js"></script>
 </body>
 
 </html>
